# cross_compiler_project

./: .gitignore  .plzconfig  BUILD  README.md  buildd_plz.sh
gcc3.4.6/: CMakeLists.txt  build.sh  buildd.sh  install.sh  installd.sh
gcc3.4.6/include/: core.h  export.h
gcc3.4.6/src/: core.cpp
gcc7.3.1/: CMakeLists.txt  build.sh  buildd.sh
gcc7.3.1/src/: main.cpp
